# MSU-MPI-workshop

./: CMakeLists.txt  README.md
src/: mpi.c
